--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -96,7 +96,7 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(3px);
-  z-index: 1;
+  z-index: 100;
 }
 
 .profilebtn {
@@ -171,7 +171,7 @@
   box-shadow: -6px 0 12px rgba(0, 0, 0, 0.15);
   transform: translateX(100%);
   animation: slideIn 0.4s ease-out forwards;
-  z-index: 2;
+  z-index: 200;
   display: flex;
   flex-direction: column;
 }
