--- a/src/pages/signup/signup.module.css
+++ b/src/pages/signup/signup.module.css
@@ -105,6 +105,7 @@
 
 .passwordWrapper {
   position: relative;
+  z-index: 1;
 }
 
 .showPassword {
@@ -115,7 +116,7 @@
   cursor: pointer;
   font-size: 1rem;
   color: #6b7280;
-  z-index: 1;
+  z-index: 2;
 }
 
 .signUpButton {
